--- a/src/CardGui.form
+++ b/src/CardGui.form
@@ -22,6 +22,24 @@
               <text value="Button"/>
             </properties>
           </component>
+          <component id="eaaf9" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+            <constraints>
+              <card name="Card2"/>
+            </constraints>
+            <properties>
+              <model>
+                <item value="sads"/>
+              </model>
+            </properties>
+          </component>
+          <component id="50ba1" class="javax.swing.JButton" binding="button2" default-binding="true">
+            <constraints>
+              <card name="Card3"/>
+            </constraints>
+            <properties>
+              <text value="Button"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <grid id="65822" binding="panel2" layout-manager="CardLayout" hgap="0" vgap="0">
